[tool.poetry]
name = "pyrepa"
version = "0.1.0"
description = "Parser for python repositories: PYthon REpository PArser"
authors = ["Vladimir Kopytok <kopytokv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipython = "^8.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
